// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? Get started                                                                                    │
│                                                                                                  │
│   Which kind of LLM provider would you like to use?                                              │
│                                                                                                  │
│   (selected) Use Gemini API(not selected) Use OpenAI-compatible API                              │
│                                                                                                  │
│   Something went wrong                                                                           │
│                                                                                                  │
│   (Use Enter to select)                                                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? Get started                                                                                    │
│                                                                                                  │
│   Which kind of LLM provider would you like to use?                                              │
│                                                                                                  │
│   (selected) Use Gemini API(not selected) Use OpenAI-compatible API                              │
│                                                                                                  │
│   (Use Enter to select)                                                                          │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders the OpenAI config form when OpenAI is selected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? Configure OpenAI-compatible API                                                                │
│                                                                                                  │
│   Base URL                                                                                       │
│   Enter the base URL of your API endpoint. For example: https://api.openai.com/v1 (Official) or  │
│   http://localhost:11434/v1 (Ollama)                                                             │
│                                                                                                  │
│   ╭────────────────────────────────────────────────────────────────────────────────────────────╮ │
│   │ https://api.openai.com/v1                                                                  │ │
│   ╰────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│   API Key                                                                                        │
│   Optional for local or custom endpoints that do not require authentication. When provided, it   │
│   is securely stored in your system keychain.                                                    │
│                                                                                                  │
│   ╭────────────────────────────────────────────────────────────────────────────────────────────╮ │
│   │ https://api.openai.com/v1                                                                  │ │
│   ╰────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│   (Press Enter to submit, Esc to cancel)                                                         │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
